save work  after refactor lost

--- a/src/app/components/ai-applications/create-new-ai-application/create-new-ai-application.component.html
+++ b/src/app/components/ai-applications/create-new-ai-application/create-new-ai-application.component.html
@@ -2,7 +2,7 @@
 <app-navbar [selectedPage]="'create-new-ai-application'"></app-navbar>
 
 <div class="create-new-ai-application">
-  <p>create-new-ai-application works!</p>
+  <p>create-new-ai-application works </p>
   <div class="form-group">
     <label for="aiName">AI Name</label>
     <input id="aiName" type="text" />
