--- a/src/app/components/user-management/user-management.component.html
+++ b/src/app/components/user-management/user-management.component.html
@@ -1,62 +1,92 @@
 <app-header></app-header>
-<app-navbar [selectedPage]="'reports'"></app-navbar>
+<app-navbar [selectedPage]="'user-management'"></app-navbar>
 
-<div class="container">
-  <div class="search-criteria">
-    <form (ngSubmit)="onSearch()">
-      <div class="form-group">
-        <label for="firmName">Firm Name:</label>
-        <select id="firmName" [(ngModel)]="searchCriteria.firmName" name="firmName" class="form-control">
-          <option *ngFor="let firm of firms" [value]="firm">{{ firm }}</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="qfcNumber">QFC Number:</label>
-        <input type="text" id="qfcNumber" [(ngModel)]="searchCriteria.qfcNumber" name="qfcNumber" class="form-control" maxlength="5" />
-      </div>
-      <div class="form-group">
-        <label for="firmType">Firm Types:</label>
-        <select id="firmType" [(ngModel)]="searchCriteria.firmType" name="firmType" class="form-control">
-          <option *ngFor="let type of firmTypes" [value]="type">{{ type }}</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="userRole">User Role(s):</label>
-        <select id="userRole" [(ngModel)]="searchCriteria.userRole" name="userRole" class="form-control">
-          <option *ngFor="let role of userRoles" [value]="role">{{ role }}</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="aiNumber">AI Number:</label>
-        <input type="text" id="aiNumber" [(ngModel)]="searchCriteria.aiNumber" name="aiNumber" class="form-control" maxlength="5" />
-      </div>
-      <div class="form-group">
-        <label for="emailAddress">Email Address:</label>
-        <input type="email" id="emailAddress" [(ngModel)]="searchCriteria.emailAddress" name="emailAddress" class="form-control" />
-      </div>
-      <button type="submit" class="btn btn-primary">Search</button>
-      <button type="button" class="btn btn-secondary" (click)="onReset()">Reset</button>
-    </form>
-  </div>
 
-  <div class="user-list">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Firm Name</th>
-          <th>User Name</th>
-          <th>User Role</th>
-          <th>Email Address</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of users">
-          <td>{{ user.firmName }}</td>
-          <td>{{ user.userName }}</td>
-          <td>{{ user.userRole }}</td>
-          <td>{{ user.emailAddress }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+<div class="user-management">
+  <mat-card>
+      <mat-card-header>
+          <mat-card-title>User Management</mat-card-title>
+      </mat-card-header>
+
+      <mat-card-content>
+          <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
+              <!-- Search form fields -->
+              <div class="search-form">
+                  <mat-form-field>
+                      <mat-label>QFC Number</mat-label>
+                      <input matInput formControlName="qfcNumber" placeholder="Enter QFC Number">
+                  </mat-form-field>
+
+                  <mat-form-field>
+                      <mat-label>Username</mat-label>
+                      <input matInput formControlName="username" placeholder="Enter Username">
+                  </mat-form-field>
+
+                  <mat-form-field>
+                      <mat-label>Email</mat-label>
+                      <input matInput formControlName="email" placeholder="Enter Email">
+                  </mat-form-field>
+
+                  <mat-form-field>
+                      <mat-label>Status</mat-label>
+                      <mat-select formControlName="status">
+                          <mat-option value="active">Active</mat-option>
+                          <mat-option value="inactive">Inactive</mat-option>
+                      </mat-select>
+                  </mat-form-field>
+
+                  <div class="form-actions">
+                      <button mat-raised-button color="primary" type="submit">Search</button>
+                      <button mat-raised-button type="button" (click)="onReset()">Reset</button>
+                  </div>
+              </div>
+          </form>
+
+          <!-- User list -->
+          <div class="user-list-container" *ngIf="users.length">
+              <table mat-table [dataSource]="users">
+                  <!-- Table columns -->
+                  <ng-container matColumnDef="qfcNumber">
+                      <th mat-header-cell *matHeaderCellDef> QFC Number </th>
+                      <td mat-cell *matCellDef="let user"> {{user.qfcNumber}} </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="username">
+                      <th mat-header-cell *matHeaderCellDef> Username </th>
+                      <td mat-cell *matCellDef="let user"> {{user.username}} </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="email">
+                      <th mat-header-cell *matHeaderCellDef> Email </th>
+                      <td mat-cell *matCellDef="let user"> {{user.email}} </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="status">
+                      <th mat-header-cell *matHeaderCellDef> Status </th>
+                      <td mat-cell *matCellDef="let user"> {{user.status}} </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="actions">
+                      <th mat-header-cell *matHeaderCellDef> Actions </th>
+                      <td mat-cell *matCellDef="let user">
+                          <button mat-button (click)="unlockUser(user.wUserId)" 
+                                          *ngIf="user.isAccountLocked">Unlock</button>
+                          <button mat-button (click)="editUser(user.wUserId)">Edit</button>
+                          <button mat-button (click)="deleteUser(user.wUserId)">Delete</button>
+                      </td>
+                  </ng-container>
+
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+
+              <mat-paginator 
+                  [length]="totalItems"
+                  [pageSize]="pageSize"
+                  [pageIndex]="currentPage - 1"
+                  (page)="onPageChange($event)">
+              </mat-paginator>
+          </div>
+      </mat-card-content>
+  </mat-card>
 </div>
