--- a/src/app/components/workflows/workflows.component.scss
+++ b/src/app/components/workflows/workflows.component.scss
@@ -2,5 +2,26 @@
   h1 {
     color: #333;
   }
-  /* Add your component styles here */
+ }
+
+
+.table-container {
+  margin: 20px;
+}
+
+.mat-elevation-z8 {
+  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+}
+
+.mat-header-cell {
+  font-weight: bold;
+  background-color: #f5f5f5;
+}
+
+.mat-cell {
+  padding: 8px;
+}
+
+.mat-row:hover {
+  background-color: #f1f1f1;
 }
