--- a/src/app/components/system-access/access-modal/access-modal.component.scss
+++ b/src/app/components/system-access/access-modal/access-modal.component.scss
@@ -33,9 +33,9 @@
 
 .modal-body {
   .form-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    // display: grid;
+    // grid-template-columns: repeat(2, 1fr);
+    // gap: 20px;
 
     .form-item {
       display: flex;
@@ -49,7 +49,7 @@
 
   .form-input {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 
     mat-form-field {
       width: 100%;
