Gen Sub + Approval submit/save/signoff

--- a/src/app/components/submission-records/forms/approval/approval.component.html
+++ b/src/app/components/submission-records/forms/approval/approval.component.html
@@ -227,6 +227,7 @@
             [DocSignText]="this.DocSignText"
             [ReportFormName]="data.Form"
             (fileUploaded)="onFileUploaded($event)"
+            (beforeUpload)="beforeFileUploaded()"
           ></app-file-uploader>
         </div>
       </mat-tab>
