--- a/src/app/components/notices/view-notice/view-notice.component.html
+++ b/src/app/components/notices/view-notice/view-notice.component.html
@@ -102,7 +102,8 @@
         <div class="tab-content">
           <app-file-uploader [ShowHeaderPanel]="true" [ShowHeaderFormName]="false" [ObjectID]="123"
             [ObjectInstanceID]="456" [ObjectInstanceRevNum]="1" [DocTypeID]="789" [FormTypeID]="101112"
-            [ShowPrimaryDoc]="true" (fileUploaded)="onFileUploaded($event)"></app-file-uploader>
+            [ShowPrimaryDoc]="true" (fileUploaded)="onFileUploaded($event)"
+            (beforeUpload)="beforeFileUploaded()"></app-file-uploader>
         </div>
       </mat-tab>
 
