--- a/src/app/components/submission-records/forms/withdrawal/withdrawal.component.html
+++ b/src/app/components/submission-records/forms/withdrawal/withdrawal.component.html
@@ -77,6 +77,7 @@
               [ReportFormName]="data.Form"
               (fileUploaded)="onFileUploaded($event)"
               (ObjectInstanceIDChange)="onObjectInstanceIDChange($event)"
+              (beforeUpload)="beforeFileUploaded()"
             ></app-file-uploader>
           </div>
         </mat-tab>
