--- a/src/app/components/system-access/access-modal/access-modal.component.html
+++ b/src/app/components/system-access/access-modal/access-modal.component.html
@@ -38,8 +38,17 @@
           <div class="form-item">
             <mat-form-field appearance="outline" class="form-input">
               <mat-label>Date of Birth</mat-label>
-              <input matInput type="date" formControlName="dob" />
-              <mat-error *ngIf="documentAdminForm.controls['dob'].invalid">Date of Birth is required</mat-error>
+              <input
+                matInput
+                [matDatepicker]="picker"
+                formControlName="dob"
+                placeholder="dd/mon/yyyy"
+              />
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+              <mat-error *ngIf="documentAdminForm.controls['dob'].invalid">
+                Date of Birth is required
+              </mat-error>
             </mat-form-field>
           </div>
 
