--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,121 +1,163 @@
-<div class="register-container">
+<div class="back-to-login">
+    <button mat-raised-button (click)="navigateToLogin()">
+        <mat-icon class="arrow-icon">arrow_back</mat-icon>
+        <span class="back-text">Back to Login</span>
+    </button>
+</div>
+<div class="contact-container">
     <div class="sections-wrapper">
         <div class="left-section">
-            <div class="lift-content-wrapper">
-                <div class="logo-wrapper">
+            <div class="content-wrapper contact-content-wrapper">
+                <div class="logo-wrapper" *ngIf="!isLoggedIn()">
                     <img src="/assets/images/logo.svg" alt="Logo" class="logo" />
                 </div>
-                <h2>
-                    Welcome to <span>The QFC Regulatory Authority</span> Electronic <br> Submission System
+                <h2>{{ this.Header }}
                 </h2>
-
                 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-                    <mat-radio-group formControlName="idType" class="radio-group"
-                        (change)="onIdTypeChange($event.value)">
-                        <mat-radio-button value="qfc">QFC Number</mat-radio-button>
-                        <mat-radio-button value="rf">RF Number</mat-radio-button>
-                    </mat-radio-group>
+                    <div class="form-grid">
+                        <!-- <div class="message">Since you are using this site for the first time you will be prompted to enter your firm’s QFC number and your date of birth.<br>
+                            After you enter them correctly, you will be allowed to choose your password and set answers to your favourite questions.<br>
+                            Please note that you will be prompted to enter the answers, as set by you, to the favourite questions whenever you request a new password to access this website.</div> -->
+                        <div class="form-item" *ngIf="this.Step == 0">
+                            <p class="label">Enter your firm's QFC License Number: <span class="asterisk">*</span></p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <input matInput formControlName="qfcNumber" placeholder="Enter your QFC Number" />
+                                <mat-error *ngIf="registerForm.get('qfcNumber')?.invalid">
+                                    QFC Number is required
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                        <div class="form-item" *ngIf="this.Step == 0">
+                            <p class="label">Enter your Date of Birth: <span class="asterisk">*</span></p>
+                            <mat-form-field appearance="outline" class="form-input">
+                                <input matInput [matDatepicker]="picker" formControlName="dob"
+                                    placeholder="dd/mon/yyyy" />
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker #picker></mat-datepicker>
+                                <mat-error *ngIf="registerForm.get('dob')?.invalid">
+                                    Date of Birth is required
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="italic">Please choose your new password (Password shall have a minimum of 8
+                                characters and a maximum of 14 characters. Password must contain at least one lower case
+                                letter and one upper case letter and one number)</p>
+                        </div>
 
-                    <ng-container *ngIf="idType === 'qfc'">
-                        <p class="label">Number : <span class="asterisk">*</span></p>
-                        <mat-form-field appearance="outline" class="form-field">
-                            <input matInput formControlName="QfcNumber" placeholder="Enter QFC number" />
-                            <mat-error *ngIf="registerForm.get('QfcNumber')?.invalid">
-                                QFC Number is required
-                            </mat-error>
-                        </mat-form-field>
-                    </ng-container>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Registered Email:</p>
+                            {{ this.RegisteredEmail }}
+                        </div>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">New Password:</p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <input matInput type="password" formControlName="newPassword"
+                                    placeholder="Enter new password" />
+                                <mat-error *ngIf="registerForm.get('newPassword')?.invalid">
+                                    New password is required.
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
 
-                    <ng-container *ngIf="idType === 'rf'">
-                        <p class="label">Number : <span class="asterisk">*</span></p>
-                        <mat-form-field appearance="outline" class="form-field">
-                            <input matInput formControlName="registrationDetails" placeholder="Enter RF number" />
-                            <mat-error *ngIf="registerForm.get('registrationDetails')?.invalid">
-                                RF Number is required
-                            </mat-error>
-                        </mat-form-field>
-                    </ng-container>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Confirm New Password:</p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <input matInput type="password" formControlName="confirmPassword"
+                                    placeholder="Confirm new password" />
+                                <mat-error *ngIf="passwordsDoNotMatch">
+                                    Passwords do not match.
+                                </mat-error>
+                                <mat-error *ngIf="passwordsInvalid">
+                                    Password should contain at least one upper case, one lower case and one number and
+                                    the length between 8 to 14 characters.
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="italic">To help recalling your password, please choose the following questions and
+                                provide answers.</p>
+                        </div>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Choose a question: </p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <mat-select formControlName="question1" placeholder="Select">
+                                    <mat-option *ngFor="let question of questions1"
+                                        [value]="question.wLoginQuestionTypeID">
+                                        {{ question.loginQuestion }}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
 
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Answer: <span class="asterisk">*</span></p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <input matInput formControlName="answer1" />
+                                <mat-error *ngIf="registerForm.get('answer1')?.invalid">
+                                    Answer is required
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
 
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Choose a question: </p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <mat-select formControlName="question2" placeholder="Select">
+                                    <mat-option *ngFor="let question of questions2"
+                                        [value]="question.wLoginQuestionTypeID">
+                                        {{ question.loginQuestion }}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
 
-                    <p class="label">Registered Email <span class="asterisk">*</span></p>
-                    <mat-form-field appearance="outline" class="form-field">
-                        <input matInput formControlName="email" placeholder="Enter your email" />
-                        <mat-error *ngIf="registerForm.get('email')?.invalid">Valid email is required</mat-error>
-                    </mat-form-field>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Answer: <span class="asterisk">*</span></p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <input matInput formControlName="answer2" />
+                                <mat-error *ngIf="registerForm.get('answer2')?.invalid">
+                                    Answer is required
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
 
-                    <p class="label">Password <span class="asterisk">*</span></p>
-                    <mat-form-field appearance="outline" class="form-field">
-                        <input matInput type="password" formControlName="password" placeholder="Enter your password" />
-                        <mat-error *ngIf="registerForm.get('password')?.invalid">Password is required</mat-error>
-                    </mat-form-field>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Choose a question: </p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <mat-select formControlName="question3" placeholder="Select">
+                                    <mat-option *ngFor="let question of questions3"
+                                        [value]="question.wLoginQuestionTypeID">
+                                        {{ question.loginQuestion }}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
 
-                    <p class="label">Type the code shown below <span class="asterisk">*</span></p>
-                    <mat-form-field appearance="outline" class="form-field">
-                        <input matInput formControlName="captcha" placeholder="Enter captcha" />
-                        <mat-error *ngIf="registerForm.get('captcha')?.invalid">Captcha is required</mat-error>
-                    </mat-form-field>
+                        <div class="form-item" *ngIf="this.Step == 1">
+                            <p class="label">Answer: <span class="asterisk">*</span></p>
+                            <mat-form-field appearance="outline" class="form-field">
+                                <input matInput formControlName="answer3" />
+                                <mat-error *ngIf="registerForm.get('answer3')?.invalid">
+                                    Answer is required
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
 
-                    <div class="terms-container">
-                        <mat-checkbox formControlName="terms">I Agree to the terms of use</mat-checkbox>
-                        <a href="#" class="forget-pass-link">Forgot Password?</a>
+                        <div class="form-item captcha-container full-width">
+                            <div class="captcha-image">
+                                <div class="g-recaptcha" data-sitekey="Your_Site_Key_Here"></div>
+                            </div>
+                        </div>
                     </div>
 
-                    <button (click)="register()" mat-raised-button class="register-button" type="submit" [disabled]="!registerForm.invalid">
-                        Register
-                    </button>
-
-                    <div class="contact-us-divider">
-                        <span class="contact-us-text">Contact us</span>
-                        <div class="divider"></div>
-                        <span class="help-text">Help</span>
+                    <div class="button-group">
+                        <button mat-raised-button class="contact-button" type="submit">
+                            {{ this.SubmitLabel}}
+                        </button>
                     </div>
                 </form>
             </div>
         </div>
-
-        <div class="right-section">
-            <div class="right-content-wrapper">
-                <div class="info-section">
-                    <img src="assets/images/Paper.png" alt="Document Icon" class="document-icon" />
-                    <h3 class="system-users-title">System Users:</h3>
-                    <p class="system-users-description">
-                        This system is meant to be used by individuals from firms which are
-                        authorized to engage in regulated activities licensed by the QFC Regulatory
-                        Authority of a Designated Non-Financial Business or Professional (DNFBP).
-                    </p>
-                </div>
-                <hr>
-                <div class="compatibility-section">
-                    <p>
-                        This website works best with Internet Explorer 11, Microsoft Edge 13 and above,
-                        Firefox 47 and above, or Google Chrome 57 and above.
-                    </p>
-                </div>
-                <div class="file-links">
-                    <a href="#" class="download-link">
-                        XBRL file installer / Manual form &nbsp;
-                        <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
-                            <path
-                                d="M12.4169 7.27034C15.1175 7.50289 16.2203 8.89071 16.2203 11.9289V12.0264C16.2203 15.3797 14.8775 16.7225 11.5242 16.7225H6.64054C3.28727 16.7225 1.94446 15.3797 1.94446 12.0264V11.9289C1.94446 8.91322 3.03221 7.5254 5.68782 7.27784"
-                                stroke="#A51E36" stroke-width="1.03085" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M9.08594 2.09395V11.7562" stroke="#A51E36" stroke-width="1.03085"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M11.5994 10.0834L9.08632 12.5964L6.57324 10.0834" stroke="#A51E36"
-                                stroke-width="1.03085" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        &nbsp;
-                        <span class="download-text">Download file</span>
-                    </a>
-                    <a href="#" class="download-link">
-                        You can find QFC Regulatory Authority forms
-                        &nbsp;
-                        <span class="download-text">Open Here</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-
     </div>
 </div>
