--- a/src/app/components/workflows/workflows.component.scss
+++ b/src/app/components/workflows/workflows.component.scss
@@ -4,9 +4,12 @@
   }
  }
 
+ .search-form {
+  margin-bottom: 20px;
+}
 
 .table-container {
-  margin: 20px;
+  margin: 20px 0;
 }
 
 .mat-elevation-z8 {
